--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
             margin-top: 100px; 
             padding: 30px; 
         }
-        .menu-title {
-            font-size: 1.8em; 
-        }
     </style>
 </head>
 <body>
@@ -23,6 +20,15 @@
         <h1>🔬 Plataforma Científica Interativa</h1>
         <p>Projeto Mais Ciência na Escola</p>
     </header>
+
+    <nav>
+        <ul class="nav-links">
+            <li><a href="index.html">Início (Temas)</a></li>
+            <li><a href="estudo-botos.html">Estudo Botos</a></li>
+            <li><a href="#">Sobre o Projeto</a></li>
+            <li><a href="#">Contato</a></li>
+        </ul>
+    </nav>
 
     <main class="game-menu">
         <h2 class="menu-title">Escolha o Módulo de Estudo:</h2>
