--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Início | Projeto Mais Ciência na Escola</title>
+    <title>Início | Projeto Mais Ciência</title>
     <link rel="stylesheet" href="style.css"> 
     <style>
         /* Estilo local para manter o menu principal compacto */
@@ -17,11 +17,16 @@
 <body>
 
     <header>
-        <h1>🔬 Plataforma Científica Interativa</h1>
-        <p>Projeto Mais Ciência na Escola</p>
+        <div class="logo">🔬 Projeto Mais Ciência</div>
+        
+        <div class="menu-toggle">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
     </header>
 
-    <nav>
+    <nav id="main-nav">
         <ul class="nav-links">
             <li><a href="index.html">Início (Temas)</a></li>
             <li><a href="estudo-botos.html">Botos da Amazônia</a></li>
@@ -56,5 +61,5 @@
         <p>Desenvolvido com o objetivo de fomentar o estudo de Ciências e Biologia.</p>
     </footer>
 
-</body>
+    </body>
 </html>
